[gd_scene format=3 uid="uid://cse3ktqjdgusv"]

[ext_resource type="Script" uid="uid://n8kf4cvdlyns" path="res://scenes/entities/cake/cake.gd" id="1_4ujaa"]
[ext_resource type="Texture2D" uid="uid://dy2syw05riule" path="res://assets/images/cake/pan.png" id="2_icyrn"]
[ext_resource type="Script" uid="uid://v1s18rxiqbfk" path="res://scenes/entities/cake/cake_sprites.gd" id="2_yl5fd"]
[ext_resource type="Texture2D" uid="uid://g6pjm82rchd" path="res://assets/images/cake/cake-Sheet.png" id="5_gyo61"]
[ext_resource type="Script" uid="uid://coosbu53gyufc" path="res://scenes/entities/cake/recipe_display.gd" id="5_lmh8o"]
[ext_resource type="PackedScene" uid="uid://daw6uqywkm2o5" path="res://scenes/entities/cake/recipe_icon.tscn" id="6_lehos"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3iun"]
size = Vector2(36, 30)

[node name="Cake" type="Area2D" unique_id=1323128054]
z_index = 1
collision_layer = 2
script = ExtResource("1_4ujaa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1265835811]
shape = SubResource("RectangleShape2D_r3iun")

[node name="Sprites" type="Node2D" parent="." unique_id=529448051]
position = Vector2(0, -13.333)
script = ExtResource("2_yl5fd")

[node name="PanSprite" type="Sprite2D" parent="Sprites" unique_id=1535337439]
texture = ExtResource("2_icyrn")

[node name="BaseSprite" type="Sprite2D" parent="Sprites" unique_id=1791581601]
visible = false
texture = ExtResource("5_gyo61")
hframes = 3
vframes = 3

[node name="IcingSprite" type="Sprite2D" parent="Sprites" unique_id=1702967377]
visible = false
texture = ExtResource("5_gyo61")
hframes = 3
vframes = 3
frame = 4

[node name="ToppingsSprite" type="Sprite2D" parent="Sprites" unique_id=1748063612]
visible = false
texture = ExtResource("5_gyo61")
hframes = 3
vframes = 3
frame = 7

[node name="RecipeDisplay" type="Node2D" parent="." unique_id=484792779]
script = ExtResource("5_lmh8o")

[node name="BaseIcon" parent="RecipeDisplay" unique_id=305453230 instance=ExtResource("6_lehos")]
position = Vector2(-12, -40)

[node name="IcingIcon" parent="RecipeDisplay" unique_id=128294286 instance=ExtResource("6_lehos")]
position = Vector2(12, -40)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
